--- a/index.html
+++ b/index.html
@@ -22,29 +22,30 @@
   <body>
     <header class="cabecalho">
       <div class="container">
-        <img src="./css/img/logo.png" alt="Logo" class="cabecalho__logo" />
         <div class="cabecalho__estilo">
+          <img src="./css/img/logo.png" alt="Logo" class="cabecalho__logo" />
           <nav class="cabecalho__menu">
-            <ul class="cabecalho__lista">
-              <li class="cabecalho__lista--item">
-                <a href="#" class="cabecalho__lista--link">Home</a>
-              </li>
+            <div class="cabecalho__menu--estilo">
+              <ul class="cabecalho__lista">
+                <li class="cabecalho__lista--item">
+                  <a href="#" class="cabecalho__lista--link">Home</a>
+                </li>
 
-              <li class="cabecalho__lista--item">
-                <a href="#" class="cabecalho__lista--link"
-                  >Serviços e Produtos</a
-                >
-              </li>
+                <li class="cabecalho__lista--item">
+                  <a href="#" class="cabecalho__lista--link"
+                    >Serviços e Produtos</a
+                  >
+                </li>
 
-              <li class="cabecalho__lista--item">
-                <a href="#" class="cabecalho__lista--link">Blog</a>
-              </li>
+                <li class="cabecalho__lista--item">
+                  <a href="#" class="cabecalho__lista--link">Blog</a>
+                </li>
 
-              <li class="cabecalho__lista--item">
-                <a href="#" class="cabecalho__lista--link">Contato</a>
-              </li>
-            </ul>
-
+                <li class="cabecalho__lista--item">
+                  <a href="#" class="cabecalho__lista--link">Contato</a>
+                </li>
+              </ul>
+            </div>
             <a class="cabecalho__menu--botao-texto">LOGIN</a>
           </nav>
         </div>
@@ -82,6 +83,7 @@
       <section class="sobre">
         <div class="sobre__container">
           <div class="sobre__estilo">
+            <img class="sobre__img>" src="" alt="" />
             <h2 class="sobre__titulo">Lorem Ipsum</h2>
             <p class="sobre__texto">
               There are many variations of passages of Lorem Ipsum available,
@@ -93,6 +95,7 @@
             </p>
           </div>
           <div class="sobre__estilo">
+            <img class="sobre__img>" src="" alt="" />
             <h2 class="sobre__titulo">Lorem Ipsum</h2>
             <p class="sobre__texto">
               Lorem Ipsum generators on the Internet tend to repeat predefined
@@ -102,6 +105,7 @@
             </p>
           </div>
           <div class="sobre__estilo">
+            <img class="sobre__img>" src="" alt="" />
             <h2 class="sobre__titulo">Lorem Ipsum</h2>
             <p class="sobre__texto">
               Lorem Ipsum generators on the Internet tend to repeat predefined
@@ -112,6 +116,7 @@
             </p>
           </div>
           <div class="sobre__estilo">
+            <img class="sobre__img>" src="" alt="" />
             <h2 class="sobre__titulo margem-direita">Lorem Ipsum</h2>
             <p class="sobre__texto">
               Lorem Ipsum generators on the Internet tend to repeat predefined
