--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
               </li>
             </ul>
 
-            <a class="menu__button">LOGIN</a>
+            <button class="menu__button">LOGIN</button>
           </nav>
         </div>
       </div>
@@ -65,7 +65,7 @@
             over 200 years old.
           </p>
 
-          <a class="banner__box--link">SAIBA MAIS</a>
+          <button class="banner__box--link">SAIBA MAIS</button>
         </div>
       </section>
 
@@ -75,7 +75,7 @@
           The standard chunk of Lorem Ipsum used since the<br />
           1500s is reproduced below for those interested.
         </p>
-        <a class="subscribe__button">Inscreva-se</a>
+        <button class="subscribe__button">Inscreva-se</button>
       </section>
       <section class="info">
         <div class="info__container">
