--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="software development consultancy" />
+
     <title>CactoIT</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -23,7 +25,7 @@
     <header class="header">
       <div class="container">
         <div class="header__box">
-          <img src="./css/img/logo.png" alt="Logo" class="header__logo" />
+          <img src="./css/img/logo.svg" alt="Logo" class="header__logo" />
           <nav class="menu">
             <ul class="menu__box">
               <li class="menu__box--item">
