--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CactoIT</title>
+    <meta name="description" content="software development consultancy" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -23,7 +24,7 @@
     <header class="header">
       <div class="container">
         <div class="header__box">
-          <img src="./css/img/logo.png" alt="Logo" class="header__logo" />
+          <img src="./css/img/logo.svg" alt="Logo" class="header__logo" />
           <nav class="menu">
             <ul class="menu__box">
               <li class="menu__box--item">
@@ -51,11 +52,11 @@
     <main>
       <section class="banner">
         <div class="banner__box">
-          <h1 class="banner__box--title">
+          <h2 class="banner__box--title">
             Lorem Ipsum is <br />
             simply dummy text
-          </h1>
-          <p class="banner__box--subtitle">
+          </h2>
+          <h6 class="banner__box--subtitle">
             Contrary to popular belief, Lorem Ipsum is not simples radom text.
             It
             <br />
@@ -63,25 +64,25 @@
             it
             <br />
             over 200 years old.
-          </p>
+          </h6>
 
-          <button class="banner__box--link">SAIBA MAIS</button>
+          <button class="banner__button--link">SAIBA MAIS</button>
         </div>
       </section>
 
       <section class="subscribe">
-        <h2 class="subscribe__title">Lorem Ipsum text</h2>
-        <p class="subscribe__description">
+        <h2>Lorem Ipsum text</h2>
+        <h5 class="subscribe__description">
           The standard chunk of Lorem Ipsum used since the<br />
           1500s is reproduced below for those interested.
-        </p>
+        </h5>
         <button class="subscribe__button">Inscreva-se</button>
       </section>
       <section class="info">
         <div class="info__container">
           <div class="info__card">
             <img class="info__img>" src="" alt="" />
-            <h2 class="info__title">Lorem Ipsum</h2>
+            <h4 class="info__title">Lorem Ipsum</h4>
             <p class="info__description">
               There are many variations of passages of Lorem Ipsum available,
               but the majority have suffered alteration in some form, by
@@ -93,7 +94,7 @@
           </div>
           <div class="info__card">
             <img class="info__img>" src="" alt="" />
-            <h2 class="info__title">Lorem Ipsum</h2>
+            <h4 class="info__title">Lorem Ipsum</h4>
             <p class="info__description">
               Lorem Ipsum generators on the Internet tend to repeat predefined
               chunks as necessary, making this the first true generator on the
@@ -103,7 +104,7 @@
           </div>
           <div class="info__card">
             <img class="info__img>" src="" alt="" />
-            <h2 class="info__title">Lorem Ipsum</h2>
+            <h4 class="info__title">Lorem Ipsum</h4>
             <p class="info__description">
               Lorem Ipsum generators on the Internet tend to repeat predefined
               chunks as necessary, making this the first true generator on the
@@ -114,7 +115,7 @@
           </div>
           <div class="info__card">
             <img class="info__img>" src="" alt="" />
-            <h2 class="info__title">Lorem Ipsum</h2>
+            <h4 class="info__title">Lorem Ipsum</h4>
             <p class="info__description">
               Lorem Ipsum generators on the Internet tend to repeat predefined
               chunks as necessary, making this the first true generator on the
@@ -124,7 +125,7 @@
         </div>
       </section>
       <section class="form">
-        <h2 class="form__title">Marque uma conversa</h2>
+        <h4 class="form__title">Marque uma conversa</h4>
         <div class="form__container">
           <div class="form__box">
             <input class="input" type="text" name="Nome" placeholder="Nome" />
@@ -152,11 +153,10 @@
               wrap="hard"
               rows="5"
               type="text"
+              class="input--text"
               name="form"
               placeholder="Conta um pouco mais"
-              class="input--text"
-            >
-            </textarea>
+            ></textarea>
             <button class="form__button">ENVIAR</button>
           </div>
         </div>
