--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
       </section>
 
       <section class="subscribe">
-        <h2>Lorem Ipsum text</h2>
+        <h2 class="subscribe__title">Lorem Ipsum text</h2>
         <h5 class="subscribe__description">
           The standard chunk of Lorem Ipsum used since the<br />
           1500s is reproduced below for those interested.
